[project]
name = "razorpay_erpnext"
authors = [
    { name = "Soft Served Web", email = "aswin@softservedweb.com"}
]
description = "Razorpay Integration for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "razorpay~=1.4.2"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
